# cpplab

./: .gitignore  CMakeLists.txt  README.md  complex.cpp  cpplab.kdev4  main.cpp  sse.cpp  time.cpp
clab/: hello  hello.c  module.c
src/: CMakeLists.txt
src/bmath/: CMakeLists.txt  complex.cpp  complex.hpp  math.cpp  math.hpp
src/bmath/demos/: complex.cpp  math.cpp
src/core/: CMakeLists.txt  avx2.cpp  avx2.h  blist.cpp  blist.h
src/core/bmath/: bmath.h  complex.cpp  complex.hpp
src/core/cpu/: avx2.cpp  avx2.hpp  naive.cpp  naive.hpp  sse.cpp  sse.hpp  types.hpp  utils.hpp
src/cpu/: CMakeLists.txt  avx2.cpp  avx2.hpp  naive.cpp  naive.hpp  sse.cpp  sse.hpp  types.hpp  utils.hpp
src/cpu/demos/: sse.cpp
src/dtstruct/: blist.cpp  blist.hpp
src/misc/memory/: CMakeLists.txt  smartpointer.cpp  smartpointer.h
src/opengl/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  gl1.cpp  utils.cpp  utils.h
src/opengl/res/shaders/: Basic.shader
